oculus section small fix

--- a/styles/oculus.css
+++ b/styles/oculus.css
@@ -46,7 +46,6 @@
 .oculus-section-block{
     background-position: center;
     background-size: cover;
-    overflow: hidden;
     background-repeat: no-repeat;
 }
 .oculus-section-text-block{
